--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="item" data-category="hot">
           <div class="item-img">
             <img src="https://www.nespresso.com/ncp/res/uploads/recipes/nespresso-recipes-Espresso-Macchiato.jpg" alt="Espresso">
-            <span class="badge">Bestseller</span>
+            <span class="badge">Our Bestseller</span>
           </div>
           <div class="item-info">
             <h3>Espresso</h3>
@@ -407,3 +407,4 @@
   <script src="JS.js"></script>
 </body>
 </html>
+
